--- a/TP01 - Analisis de Texto/ejercicio7/notebook.ipynb
+++ b/TP01 - Analisis de Texto/ejercicio7/notebook.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "13d95674",
    "metadata": {},
    "outputs": [
@@ -73,17 +73,19 @@
     "# ranks = list(range(1, len(sorted_terms[:100]) + 1))  # 1, 2, 3, ...\n",
     "# freqs = [freq for _, freq in sorted_terms[:100]]\n",
     "\n",
-    "# Ajuste de curva con np.polyfit en escala log-log.  Ajusta una curva al modelo de Zipf y obtiene los parámetros C y β.\n",
-    "log_ranks = np.log(ranks)\n",
+    "# Ajuste de curva con np.polyfit en escala log-log.  Ajusta una curva al modelo de Zipf y obtiene los parámetros C (Constante de proporcionalidad) y β (Exponente de la Ley de Zipf).\n",
+    "log_ranks = np.log(ranks)   # Convertir a logaritmo\n",
     "log_freqs = np.log(freqs)\n",
     "\n",
     "# polyfit de grado 1 (recta)\n",
     "coef = np.polyfit(x=log_ranks, y=log_freqs, deg=1)\n",
-    "print(\"Coeficientes de la recta log-log:\", coef)  # Returns a vector of coefficients p (parámetros C y β)\n",
+    "print(\"Coeficientes de la recta log-log:\", coef)  # Returns a vector of coefficients p (coeficientes a y b o pendiente y término independiente de la recta ajustada)\n",
+    "# Nota: Si la pendiente (β) es cercana a -1, los datos siguen la Ley de Zipf.\n",
     "\n",
     "# Cálculo de la recta estimada\n",
-    "fitted_log_freqs = np.polyval(coef, log_ranks)\n",
-    "fitted_freqs = np.exp(fitted_log_freqs)"
+    "fitted_log_freqs = np.polyval(coef, log_ranks)  # Evalúa el polinomio ajustado (la recta) en los valores de log_ranks\n",
+    "# Devuelve los valores estimados de log_freqs (frecuencias en escala logarítmica) según el modelo ajustado\n",
+    "fitted_freqs = np.exp(fitted_log_freqs) # Convertir de nuevo a escala normal (inversión del logaritmo)"
    ]
   },
   {
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "c643bd0c",
    "metadata": {},
    "outputs": [
@@ -172,9 +174,7 @@
     "plt.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"\\nConclusión básica: Si el exponente del ajuste log-log es cercano a -1, la distribución se aproxima a una ley de Zipf.\")"
+    "plt.show()"
    ]
   }
  ],
