fix tokenizador reconocía comillas

--- a/TP01 - Analisis de Texto/ejercicio8/notebook.ipynb
+++ b/TP01 - Analisis de Texto/ejercicio8/notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "3622fd0e",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total de términos únicos: 26645\n"
+      "Total de términos únicos: 26461\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "8a8133c1",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficientes de la recta log-log: [-1.15691    11.44913022]\n"
+      "Coeficientes de la recta log-log: [-1.15943468 11.46926079]\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "2f23c348",
    "metadata": {},
    "outputs": [
@@ -94,13 +94,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parámetros de la ley de Zipf: C = 93819.70821221864, b = -1.1569099990102645\n",
-      "Cantidad de tokens en el 10% del vocabulario (según Ley de Zipf): 479703.0094362753\n",
-      "Cantidad de tokens en el 10% del vocabulario (real): 332707\n",
-      "Cantidad de tokens en el 20% del vocabulario (según Ley de Zipf): 497578.5236158122\n",
-      "Cantidad de tokens en el 20% del vocabulario (real): 351787\n",
-      "Cantidad de tokens en el 30% del vocabulario (según Ley de Zipf): 507164.886312633\n",
-      "Cantidad de tokens en el 30% del vocabulario (real): 361412\n"
+      "Parámetros de la ley de Zipf: C = 95727.4902750891, b = -1.159434684148317\n",
+      "Cantidad de tokens en el 10% del vocabulario (según Ley de Zipf): 485865.50039360026\n",
+      "Cantidad de tokens en el 10% del vocabulario (real): 332633\n",
+      "Cantidad de tokens en el 20% del vocabulario (según Ley de Zipf): 503744.2523391043\n",
+      "Cantidad de tokens en el 20% del vocabulario (real): 351729\n",
+      "Cantidad de tokens en el 30% del vocabulario (según Ley de Zipf): 513323.1361052805\n",
+      "Cantidad de tokens en el 30% del vocabulario (real): 361370\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "f293d181",
    "metadata": {},
    "outputs": [
@@ -148,19 +148,19 @@
      "text": [
       "\n",
       "Poda del vocabulario al 10%:\n",
-      "Palabras podadas: 2664\n",
-      "Palabras podadas que no son stopwords: 2230\n",
-      "Porcentaje de palabras podadas que no son stopwords: 83.71%\n",
+      "Palabras podadas: 2646\n",
+      "Palabras podadas que no son stopwords: 2211\n",
+      "Porcentaje de palabras podadas que no son stopwords: 83.56%\n",
       "\n",
       "Poda del vocabulario al 20%:\n",
-      "Palabras podadas: 5329\n",
-      "Palabras podadas que no son stopwords: 4809\n",
-      "Porcentaje de palabras podadas que no son stopwords: 90.24%\n",
+      "Palabras podadas: 5292\n",
+      "Palabras podadas que no son stopwords: 4772\n",
+      "Porcentaje de palabras podadas que no son stopwords: 90.17%\n",
       "\n",
       "Poda del vocabulario al 30%:\n",
-      "Palabras podadas: 7993\n",
-      "Palabras podadas que no son stopwords: 7428\n",
-      "Porcentaje de palabras podadas que no son stopwords: 92.93%\n"
+      "Palabras podadas: 7938\n",
+      "Palabras podadas que no son stopwords: 7373\n",
+      "Porcentaje de palabras podadas que no son stopwords: 92.88%\n"
      ]
     }
    ],
