--- a/TP01 - Analisis de Texto/ejercicio9/notebook.ipynb
+++ b/TP01 - Analisis de Texto/ejercicio9/notebook.ipynb
@@ -18,7 +18,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 1,
             "id": "91b8c62b",
             "metadata": {},
             "outputs": [],
@@ -104,17 +104,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": null,
             "id": "36ac0c0a",
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x7f44cefbcef0>"
+                            "<matplotlib.legend.Legend at 0x765120547ef0>"
                         ]
                     },
-                    "execution_count": 14,
+                    "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
                 },
@@ -144,6 +144,25 @@
                 "plt.ylabel(\"Términos únicos (V)\")\n",
                 "plt.title(\"Escala lineal\")\n",
                 "plt.legend()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "547e8440",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Escala log-log\n",
+                "plt.subplot(1, 2, 2)\n",
+                "plt.plot(np.log(N_vals), np.log(V_vals), \"o\", label=\"Datos reales\")\n",
+                "plt.plot(np.log(N_fit), np.log(V_fit), \"-\", label=f\"Ajuste: V = {K:.2f} * N^{beta:.2f}\")\n",
+                "plt.xlabel(\"log(N)\")\n",
+                "plt.ylabel(\"log(V)\")\n",
+                "plt.title(\"Escala log-log\")\n",
+                "plt.legend()\n",
+                "plt.tight_layout()\n",
+                "plt.show()"
             ]
         }
     ],
