--- a/TP01 - Analisis de Texto/ejercicio7/notebook.ipynb
+++ b/TP01 - Analisis de Texto/ejercicio7/notebook.ipynb
@@ -69,7 +69,8 @@
     "ranks = list(range(1, len(sorted_terms) + 1))  # 1, 2, 3, ...\n",
     "freqs = [freq for _, freq in sorted_terms]\n",
     "\n",
-    "# Descomentar para seleccionar top 100 terms\n",
+    "# Descomentar para seleccionar top 100 terms (para que se aprecie mejor y ver el decrecimiento de la curva más suave)\n",
+    "\n",
     "# ranks = list(range(1, len(sorted_terms[:100]) + 1))  # 1, 2, 3, ...\n",
     "# freqs = [freq for _, freq in sorted_terms[:100]]\n",
     "\n",
@@ -90,11 +91,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "869e2675",
+   "id": "617129c8",
    "metadata": {},
    "source": [
-    "Para que se aprecie mejor, se pueden seleccionar los primeros 100 términos para ver el decrecimiento de la curva más suave.\n",
-    "Usar sorted_terms[:100]"
+    "### Explicación bloque anterior\n",
+    "La función **np.polyval()** se utiliza para evaluar el polinomio (la recta) que se ha ajustado con **np.polyfit()** en los puntos de $\\log(\\text{ranking})$. Esto es importante porque:\n",
+    "\n",
+    "- **Obtención de valores estimados:** Una vez que np.polyfit te devuelve los coeficientes (que en este caso son el intercepto y la pendiente, equivalentes a $\\log C$ y $-\\beta$), necesitas calcular cuáles serían los valores de $\\log(\\text{frecuencia})$ estimados para cada $ \\log(\\text{ranking})$. np.polyval hace justamente eso: evalúa la recta ajustada en cada punto.\n",
+    "\n",
+    "- **Comparación con los datos reales:** Con los valores estimados en logaritmo, se puede luego aplicar np.exp para volver a la escala original y obtener la estimación de la función de Zipf, $f(r) = C \\cdot r^{-\\beta}$. Esto permite superponer la curva ajustada sobre los datos reales y ver cómo se comporta el modelo.\n",
+    "\n",
+    "En otras palabras, **np.polyval()** no es un paso extra innecesario, sino que forma parte del proceso para transformar los coeficientes obtenidos en un modelo que pueda evaluarse en cada punto y compararse con los datos observados. Así, estás, de hecho, estimando la función de la ley de Zipf a partir del modelo lineal en el espacio logarítmico y luego llevándola a la escala original para visualizarla."
    ]
   },
   {
