--- a/TP01 - Analisis de Texto/ejercicio7/notebook.ipynb
+++ b/TP01 - Analisis de Texto/ejercicio7/notebook.ipynb
@@ -183,6 +183,17 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "169f263b",
+   "metadata": {},
+   "source": [
+    "### Comentario\n",
+    "La función **plt.loglog()** se encarga de mostrar los ejes en escala logarítmica, lo que significa que al pasarle los datos originales (sin aplicar np.log) los convierte visualmente a escala log-log para que se vea la relación de potencia como una línea recta. Esto es útil para la visualización directa.\n",
+    "\n",
+    "Sin embargo, cuando queremos **calcular los parámetros** de la ley de Zipf mediante np.polyfit, necesitamos transformar los datos (aplicando np.log a las listas de rangos y frecuencias) para que la relación de potencia se convierta en una relación lineal. Esa transformación es necesaria para que np.polyfit pueda ajustar una recta y, a partir de esa recta, extraer los valores de $\\log C$ y $-\\beta$."
+   ]
   }
  ],
  "metadata": {
