black all files

--- a/TP04 - Estructuras de Datos/ejercicio1/ejercicio1.ipynb
+++ b/TP04 - Estructuras de Datos/ejercicio1/ejercicio1.ipynb
@@ -11,18 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "17a1cf3f",
    "metadata": {
     "language": "python"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total de documentos en la colección: 6043\n",
-      "Tamaño total de la colección: 146.01 MB\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtime\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mIndexadorBSBI\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m IndexadorBSBI\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mTokenizador\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Tokenizador\n\u001b[32m      8\u001b[39m CORPUS_PATH: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m../datos/\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'lib'"
      ]
     }
    ],
@@ -30,12 +33,13 @@
     "import os\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import sys\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "from lib.IndexadorBSBI import IndexadorBSBI\n",
     "from lib.Tokenizador import Tokenizador\n",
     "\n",
-    "CORPUS_PATH: str = \"datos/\"\n",
-    "INDEX_DIR: str = \"index\"\n",
+    "CORPUS_PATH: str = \"../datos/\"\n",
+    "INDEX_DIR: str = \"../index\"\n",
     "\n",
     "\n",
     "# Analiza la colección: cuenta documentos y suma tamaño total (solo .txt y .html)\n",
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "af2caa06",
    "metadata": {
     "language": "python"
@@ -80,24 +84,33 @@
       "\n",
       "Indexando con n = 604 (volcado cada 604 documentos)...\n",
       "Iniciando indexado (BSBI)...\n",
-      "Procesando documento 6043: 0_(number).htmlfor_Best_Dialogue_d7c1.htmlmltmlnia)_45c5.htmlhtml9020.html1.htmlmlmlef3b.htmltml\n",
-      "Tiempo de indexado (volcado parcial): 76.00 segundos\n",
-      "Iniciando merge de chunks...\n",
-      "Tiempo de merge: 2.40 segundos\n",
-      "\n",
-      "Indexando con n = 1208 (volcado cada 1208 documentos)...\n",
-      "Iniciando indexado (BSBI)...\n",
-      "Procesando documento 6043: 0_(number).htmlfor_Best_Dialogue_d7c1.htmlmltmlnia)_45c5.htmlhtml9020.html1.htmlmlmlef3b.htmltml\n",
-      "Tiempo de indexado (volcado parcial): 74.13 segundos\n",
-      "Iniciando merge de chunks...\n",
-      "Tiempo de merge: 2.37 segundos\n",
-      "\n",
-      "Indexando con n = 3021 (volcado cada 3021 documentos)...\n",
-      "Iniciando indexado (BSBI)...\n",
-      "Procesando documento 6043: 0_(number).htmlfor_Best_Dialogue_d7c1.htmlmltmlnia)_45c5.htmlhtml9020.html1.htmlmlmlef3b.htmltml\n",
-      "Tiempo de indexado (volcado parcial): 68.82 segundos\n",
-      "Iniciando merge de chunks...\n",
-      "Tiempo de merge: 2.14 segundos\n"
+      "Procesando documento 2: Hoher_Dachstein_5df8.html"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Procesando documento 1556: Woodstock~_Music_from_the_Original_Soundtrack_and_More_8af2.htmllbutterfly_cea0.html_8896.html"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Indexación\u001b[39;00m\n\u001b[32m     12\u001b[39m t0 = time.time()\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[43mindexador\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex_collection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCORPUS_PATH\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m t1 = time.time()\n\u001b[32m     15\u001b[39m sizes = indexador.index_size_on_disk()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/RI/ri-2025/TP04 - Estructuras de Datos/lib/IndexadorBSBI.py:79\u001b[39m, in \u001b[36mIndexadorBSBI.index_collection\u001b[39m\u001b[34m(self, docs_path)\u001b[39m\n\u001b[32m     75\u001b[39m doc_id += \u001b[32m1\u001b[39m\n\u001b[32m     76\u001b[39m \u001b[38;5;28mprint\u001b[39m(\n\u001b[32m     77\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\r\u001b[39;00m\u001b[33mProcesando documento \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoc_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m, end=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, flush=\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     78\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m79\u001b[39m tokens, doc_name = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_process_doc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroot\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdocs_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     80\u001b[39m terms_freq = Counter(tokens)\n\u001b[32m     81\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m token, freq \u001b[38;5;129;01min\u001b[39;00m terms_freq.items():\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/RI/ri-2025/TP04 - Estructuras de Datos/lib/IndexadorBSBI.py:117\u001b[39m, in \u001b[36mIndexadorBSBI._process_doc\u001b[39m\u001b[34m(self, fname, root, path)\u001b[39m\n\u001b[32m    115\u001b[39m     text = f.read()\n\u001b[32m    116\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m fname.endswith(\u001b[33m\"\u001b[39m\u001b[33m.html\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m117\u001b[39m         text: \u001b[38;5;28mstr\u001b[39m = \u001b[43mBeautifulSoup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhtml.parser\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m.get_text(separator=\u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    118\u001b[39m \u001b[38;5;250m        \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    119\u001b[39m \u001b[33;03m        ACÁ SE PODRÍA HACER UN PARSEO MÁS COMPLEJO DEL HTML (usando BeautifulSoup)\u001b[39;00m\n\u001b[32m    120\u001b[39m \u001b[33;03m        \"\"\"\u001b[39;00m\n\u001b[32m    121\u001b[39m tokens = \u001b[38;5;28mself\u001b[39m.tokenizer.tokenizar(text)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/RI/ri-2025/custom_env/lib/python3.12/site-packages/bs4/__init__.py:473\u001b[39m, in \u001b[36mBeautifulSoup.__init__\u001b[39m\u001b[34m(self, markup, features, builder, parse_only, from_encoding, exclude_encodings, element_classes, **kwargs)\u001b[39m\n\u001b[32m    471\u001b[39m \u001b[38;5;28mself\u001b[39m.builder.initialize_soup(\u001b[38;5;28mself\u001b[39m)\n\u001b[32m    472\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m473\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_feed\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    474\u001b[39m     success = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    475\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/RI/ri-2025/custom_env/lib/python3.12/site-packages/bs4/__init__.py:658\u001b[39m, in \u001b[36mBeautifulSoup._feed\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    655\u001b[39m \u001b[38;5;28mself\u001b[39m.builder.reset()\n\u001b[32m    657\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.markup \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m658\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mbuilder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfeed\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmarkup\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    659\u001b[39m \u001b[38;5;66;03m# Close out any unfinished strings and close all the open tags.\u001b[39;00m\n\u001b[32m    660\u001b[39m \u001b[38;5;28mself\u001b[39m.endData()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/RI/ri-2025/custom_env/lib/python3.12/site-packages/bs4/builder/_htmlparser.py:467\u001b[39m, in \u001b[36mHTMLParserTreeBuilder.feed\u001b[39m\u001b[34m(self, markup)\u001b[39m\n\u001b[32m    464\u001b[39m parser = BeautifulSoupHTMLParser(\u001b[38;5;28mself\u001b[39m.soup, *args, **kwargs)\n\u001b[32m    466\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m467\u001b[39m     \u001b[43mparser\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfeed\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmarkup\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    468\u001b[39m     parser.close()\n\u001b[32m    469\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    470\u001b[39m     \u001b[38;5;66;03m# html.parser raises AssertionError in rare cases to\u001b[39;00m\n\u001b[32m    471\u001b[39m     \u001b[38;5;66;03m# indicate a fatal problem with the markup, especially\u001b[39;00m\n\u001b[32m    472\u001b[39m     \u001b[38;5;66;03m# when there's an error in the doctype declaration.\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.12/html/parser.py:111\u001b[39m, in \u001b[36mHTMLParser.feed\u001b[39m\u001b[34m(self, data)\u001b[39m\n\u001b[32m    105\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"Feed data to the parser.\u001b[39;00m\n\u001b[32m    106\u001b[39m \n\u001b[32m    107\u001b[39m \u001b[33;03mCall this as often as you want, with as little or as much text\u001b[39;00m\n\u001b[32m    108\u001b[39m \u001b[33;03mas you want (may include '\\n').\u001b[39;00m\n\u001b[32m    109\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    110\u001b[39m \u001b[38;5;28mself\u001b[39m.rawdata = \u001b[38;5;28mself\u001b[39m.rawdata + data\n\u001b[32m--> \u001b[39m\u001b[32m111\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgoahead\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.12/html/parser.py:171\u001b[39m, in \u001b[36mHTMLParser.goahead\u001b[39m\u001b[34m(self, end)\u001b[39m\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m startswith(\u001b[33m'\u001b[39m\u001b[33m<\u001b[39m\u001b[33m'\u001b[39m, i):\n\u001b[32m    170\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m starttagopen.match(rawdata, i): \u001b[38;5;66;03m# < + letter\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m171\u001b[39m         k = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mparse_starttag\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    172\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m startswith(\u001b[33m\"\u001b[39m\u001b[33m</\u001b[39m\u001b[33m\"\u001b[39m, i):\n\u001b[32m    173\u001b[39m         k = \u001b[38;5;28mself\u001b[39m.parse_endtag(i)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.12/html/parser.py:313\u001b[39m, in \u001b[36mHTMLParser.parse_starttag\u001b[39m\u001b[34m(self, i)\u001b[39m\n\u001b[32m    311\u001b[39m match = tagfind_tolerant.match(rawdata, i+\u001b[32m1\u001b[39m)\n\u001b[32m    312\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m match, \u001b[33m'\u001b[39m\u001b[33munexpected call to parse_starttag()\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m313\u001b[39m k = \u001b[43mmatch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    314\u001b[39m \u001b[38;5;28mself\u001b[39m.lasttag = tag = match.group(\u001b[32m1\u001b[39m).lower()\n\u001b[32m    315\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m k < endpos:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -132,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0984559e",
    "metadata": {},
    "outputs": [
@@ -189,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "475f2ace",
    "metadata": {
     "language": "python"
@@ -231,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ecae3938",
    "metadata": {
     "language": "python"
@@ -270,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a78bc580",
    "metadata": {
     "language": "python"
